# Spode

./: CMakeLists.txt
src/: AssertionFailure.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Common.h  Move.cpp  Move.h  Perft.cpp  Perft.h  Piece.cpp  Piece.h  PieceGrid.cpp  PieceGrid.h  Searcher.cpp  Searcher.h  Util.h  Utils.h  main.cpp
